# bio-aho-tagger

./: README.md  pyproject.toml
src/bio_aho_tagger/: __init__.py  bio_aho_tagger.py  chem.py  opsin.py  utils.py
src/bio_aho_tagger/scripts/: EFO_disease.py  uniprot.py
